wow, so much stuff

--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.14",
-    "@primer/components": "^20.0.0",
+    "@bit/mui-org.material-ui.grid": "^4.9.10",
+    "@bit/mui-org.material-ui.paper": "^4.9.10",
+    "@bit/mui-org.material-ui.styles": "^4.9.10",
+    "@bit/react-bootstrap.react-bootstrap.carousel": "^1.0.0",
+    "@bit/react-bootstrap.react-bootstrap.internal.style-links": "^1.0.0",
+    "@bit/react-bootstrap.react-bootstrap.tab": "^1.0.0",
+    "@bit/react-bootstrap.react-bootstrap.tabs": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
